correct agent name

--- a/workshop/notebooks/S2 - Building a Multi-Agent System.ipynb
+++ b/workshop/notebooks/S2 - Building a Multi-Agent System.ipynb
@@ -522,8 +522,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Market Strategist & Synthesis Agent (MSSA)\n",
-    "The MSSA is our final processing layer that:\n",
+    "### Research Synthesis Agent (RSA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The RSA is our final processing layer that:\n",
     "- Collects all research findings\n",
     "- Cross-references different analyses\n",
     "- Creates a cohesive final report for the client\n",
